--- a/style.css
+++ b/style.css
@@ -422,7 +422,10 @@ body {
     font-weight: bold;
     margin-bottom: 0.5rem;
 }
-
+.input-group w-32{
+    height: 40px;
+    padding:0;
+}
 .section-subtitle {
     color: rgba(255, 255, 255, 0.7);
     font-size: 0.875rem;
@@ -775,4 +778,5 @@ body {
         padding: 0px;
     }
 }
+
 
