--- a/style.css
+++ b/style.css
@@ -238,12 +238,16 @@ body {
 .form-input {
     height: 35px;
     width: 100%;
-    padding: 0px;
+    padding: 0.75rem;
     border-radius: 0.375rem;
     border: none;
-    background: rgba(255, 255, 255, 0.9);
+    background: white;
     color: rgb(31, 23, 23);
     font-size: 1rem;
+}
+
+#taskCategory {
+    height: 45px;
 }
 
 .button-group {
@@ -335,10 +339,11 @@ body {
 }
 
 .card {
-    background: rgba(255, 255, 255, 0.1);
+    background: rgba(137, 43, 226, 0.079);
     backdrop-filter: blur(10px);
+    color: white;
     border-radius: 0.5rem;
-    box-shadow: 0 20px 25px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 2px 25px black;
     padding: 1.5rem;
     margin-bottom: 1.5rem;
 }
@@ -422,10 +427,7 @@ body {
     font-weight: bold;
     margin-bottom: 0.5rem;
 }
-.input-group w-32{
-    height: 40px;
-    padding:0;
-}
+
 .section-subtitle {
     color: rgba(255, 255, 255, 0.7);
     font-size: 0.875rem;
@@ -778,5 +780,3 @@ body {
         padding: 0px;
     }
 }
-
-
